# TRIDENT

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api_quick_reference.md  math.md  usage.md
notebooks/: test.ipynb
src/trident/: __init__.py
src/trident/models/: BiCM.py  __init__.py
src/trident/models/BiPLOM/: BiPLOM.py  __init__.py  bipclass.py  biplomIV.py  miscellaneous.py
src/trident/validators/: __init__.py  pairs.py  triplets.py
tests/: test_validation_pipeline.py
