[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trident"
version = "0.1.0"
description = "TRIDENT, TRIadic DEtectioN via staTistical validation"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Mattia Marzi" }]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "pandas>=2.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.5",
  "black>=24.3",
  "pre-commit>=3.7",
]

speed = [
  "numba>=0.57",
]

[project.urls]
Homepage = "https://github.com/<YOUR-USER>/TRIDENT"
Repository = "https://github.com/<YOUR-USER>/TRIDENT"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
